--- a/help.html
+++ b/help.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How I can help you</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     <div class="blog-container" style="max-width: 800px; margin: 0 auto; padding: 20px; font-family: Arial, sans-serif;">
@@ -41,6 +42,18 @@
             </button>
         </div>
     </div>
-    
+    <footer class="bg-dark text-center text-white py-4">
+        <div class="container">
+          <h6>Do follow me on</h6>
+            <div class="social-links mt-3">
+                <a href="https://www.instagram.com/webaura30/" target="__blank" class="text-white mx-3">
+                    <i class="fab fa-instagram fa-lg"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/prabuddha-chunchekar-2847881aa/" target="__blank" class="text-white mx-3">
+                    <i class="fab fa-linkedin fa-lg"></i>
+                </a>
+            </div>
+        </div>
+      </footer>
 </body>
 </html>
