--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
        
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 
     <title>Prabuddha's Portfolio</title>
 </head>
@@ -255,6 +257,19 @@
         </div>
     </div>
 </div>
+<footer class="bg-dark text-center text-white py-4">
+  <div class="container">
+    <h6>Do follow me on</h6>
+      <div class="social-links mt-3">
+          <a href="https://www.instagram.com/webaura30/" target="__blank" class="text-white mx-3">
+              <i class="fab fa-instagram fa-lg"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/prabuddha-chunchekar-2847881aa/" target="__blank" class="text-white mx-3">
+              <i class="fab fa-linkedin fa-lg"></i>
+          </a>
+      </div>
+  </div>
+</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
