--- a/project2.html
+++ b/project2.html
@@ -6,7 +6,7 @@
     <title>Prabuddha's Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-   
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <style>
         /* Custom CSS */
@@ -152,7 +152,19 @@
        
         
     </div>
-
+    <footer class="bg-dark text-center text-white py-4">
+        <div class="container">
+          <h6>Do follow me on</h6>
+            <div class="social-links mt-3">
+                <a href="https://www.instagram.com/webaura30/" target="__blank" class="text-white mx-3">
+                    <i class="fab fa-instagram fa-lg"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/prabuddha-chunchekar-2847881aa/" target="__blank" class="text-white mx-3">
+                    <i class="fab fa-linkedin fa-lg"></i>
+                </a>
+            </div>
+        </div>
+      </footer>
     <!-- Bootstrap JS and dependencies -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 </body>
