--- a/help.html
+++ b/help.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How I can help you</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 <body>
     <div class="blog-container" style="max-width: 800px; margin: 0 auto; padding: 20px; font-family: Arial, sans-serif;">
@@ -38,7 +43,7 @@
     
         <div style="text-align: center; margin-top: 50px;">
             <button style="background-color: #007bff; color: white; padding: 10px 20px; font-size: 1rem; border: none; border-radius: 5px; cursor: pointer;">
-                <a href="https://www.instagram.com/prabuddhachunchekar/" style="color: white; text-decoration: none;">Get in Touch to See How I Can Help</a>
+                <a href="https://www.linkedin.com/in/prabuddha-chunchekar-2847881aa/" target="__blank" style="color: white; text-decoration: none;">Get in Touch to See How I Can Help</a>
             </button>
         </div>
     </div>
